# dsd-agents-webinar

./: .clinerules  .env.example  .gitignore  CONTRIBUTING.md  EGRESS_LOCKED_OK.md  LICENSE  PROD_GIT_TEST.md  PROXIES_OK.md  PROXY_TEST.md  README.md  SESSION_6_REVIEW.md  TEST_REPORT.md  THIRTY_MIN.md  WEBHOOK_OK.md  metrics.py  pyproject.toml  run_notebooks.py  test_metrics.py
notebooks/: utils.py
notebooks/session_1/: 0_create_agent.ipynb
notebooks/session_2/: 1_build_first_agent.ipynb
notebooks/session_3/: 1_context_engineering.ipynb
notebooks/session_4/: 1_agent_skills.ipynb  mcp_demo_server.py
notebooks/session_4/skills/release-notes/: SKILL.md
notebooks/session_4/skills/slide-deck/: SKILL.md
notebooks/session_4/skills/web-research/: SKILL.md
notebooks/session_5/: 1_multi_agent_workflows.ipynb  incident_data.py
notebooks/session_6/: 1_evaluation_production.ipynb
tests/: test_notebooks_e2e.py  test_observability.py  test_session_2.py
