[project]
name = "dsd-deep-agents"
version = "0.1.0"
description = "Deep Agents from Scratch — Data Science Dojo x SambaNova webinar series"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.4,<2.0",
    "langchain>=0.3.0,<2.0",
    "langchain-core>=0.3.0,<2.0",
    "langchain-sambanova>=1.0.0",
    "langchain-community>=0.3.27,<2.0",
    "tavily-python>=0.5.0",
    "rich>=14.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "python-dotenv>=1.0.0",
    "langfuse>=3.0.0",
    "jupyterlab>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebooks"]
